fix: another overflow fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,5 @@
     width: 100%;
     min-height: 100vh;
     background-color: $background-main;
+    overflow: hidden;
 }
